docs/v0.4.1-alpha/welcome.zh_CN.mdx
---
title: "Welcome to Instill AI Documentation!"
lang: "en-US"
draft: false
description: "Welcome to Instill AI Documentation"
---

Explore our open-source unstructured data infrastructure stack, comprising a collection of source-available projects designed to streamline every aspect of building versatile AI applications for unstructured data.

<ZoomableImg
  src="https://raw.githubusercontent.com/instill-ai/.github/main/img/instill-projects.svg"
  alt="Open-source Unstructured Data Infrastructure Stack"
  width="600px"
/>

## Instill Core

🔮 [**Instill Core**](https://github.com/instill-ai/core) is the foundation for self-hosting our open-source unstructured data infrastructure stack.
It houses essential services like user management servers, databases, and third-party observability tools.
Instill Core also provides deployment codes to facilitate the seamless launch of both **Instill VDP** and **Instill Model**.

### Instill VDP

💧 [**Instill VDP**](https://github.com/instill-ai/vdp), or **VDP (Versatile Data Pipeline)**, is no-code/low-code pipeline builder that allows you to build, test, release and share AI workflows for unstructured data.
It empowers you to rapidly develop versatile AI capabilities with exceptional speed.

If your goal is to develop versatile AI features using Large Language Models (LLM), Generative AI, Vision, or Audio models, Instill VDP empowers you to:

- Effortlessly **connect** to your unstructured data
- **Build** pipelines to enable diverse AI functionalities in your applications
- Visually **test** pipelines with a single click, viewing output at each stage
- Easily **share** your pipelines to showcase your work

<ZoomableImg
  src="https://raw.githubusercontent.com/instill-ai/.github/main/img/instill-cloud-demo-generative-art-template.gif"
  alt="Build, test and share your pipelines - No code required!"
  width="600px"
/>

### Instill Model

⚗️ [**Instill Model**](https://github.com/instill-ai/model) emerges as an advanced ModelOps platform to seamlessly import, train and serve AI models at scale.

## Instill Cloud

Not quite into self-hosting? We've got you covered with **☁️ Instill Cloud**!
It's a fully-managed public cloud service that grants you access to all the fantastic features of the open-source unstructured data infrastructure stack, without the hassle of managing infrastructure.
We're currently in the exciting Open Alpha testing phase, and all features are FREE during this period!

<CtaButton
  text="🚀 Try Instill Cloud Free"
  link="https://console.instill.tech/?utm_source=documentation&utm_medium=link"
/>

## Highlights

- 🚀 Accelerate AI-first applications by building end-to-end AI-powered pipelines for unstructured data up to 10 times faster
- 🔌 Utilize pre-built connectors to access data from various sources, powerful AI models, and third-party tools
- 🖱️ One-click import & deploy models and standardise AI task output formats for data integration
- 🌟 Benefit from a no-code drag-and-drop pipeline builder, enabling quick and customizable application development
- 🪢 Choose between real-time inference (SYNC) and on-demand workload (ASYNC) processing modes
- 🧁 Enjoy a scalable API-first microservice design, offering an excellent developer experience
- ⚡️ Leverage high-performing backends implemented in Go
- 📊 Gain visibility into pipeline performance through a detailed dashboard
- 🤠 Access no-/low-code interfaces, making VDP suitable for every AI and data practitioner

## No-Code/Low-Code Access

<InfoBlock type="info" title="Info">
  To access Instill Cloud, head to https://console.instill.tech.
</InfoBlock>

To access Instill Core and Instill Cloud, you have a few options:

- ⛅ [Instill Console](https://github.com/instill-ai/console): Dive in Instill Core/Cloud with no coding
- 📺 [Instill CLI](https://github.com/instill-ai/cli): Bring Instill Core/Cloud to your command line
- 📦 [Instill SDKs](/docs/latest/sdk/python): Integrate Instill Core/Cloud with your language of choice

## Be Part of Our Community and Make a Difference

We strongly believe in the power of community collaboration and deeply value your contributions.
Head over to our [Community](https://github.com/instill-ai/community) repository, the central hub for discussing our open-source projects, raising issues, and sharing your brilliant ideas.

Or, join our community on [Discord](https://discord.gg/sevxWsqpGh) to engage with fellow users and seek assistance:

- 👋 Start by introducing yourself in the **#introduce-yourself** channel and selecting a role in **#welcome**
- 🫶 Seek answers to your queries in our **#ask-for-help** channel
- 🙏 Provide valuable feedback in the **#give-feedback** channel
- 💎 Showcase your exciting projects in the **#show-your-work** channel

## Learn more and stay connected

- ⭐️ Show your support for Instill Core by giving it a star on [GitHub](https://github.com/instill-ai)
- 📚 Read our insightful [blog](/blog/?utm_source=documentation&utm_medium=link) and [tutorials](/tutorials/?utm_source=documentation&utm_medium=link)
- 📖 Subscribe to our informative [Newsletter](/newsletter/?utm_source=documentation&utm_medium=link)
- 🚀 Visit our [Product Website](/?utm_source=documentation&utm_medium=link) for more details

## Collaboration

At Instill, we believe in making AI accessible to everyone.
If you have an AI showcase, let's collaborate!
[Book a meeting](https://calendly.com/instill-ai/chat-with-us) to tell us about yourself and your project, and we'll be in touch 👐.
