docs/v0.12.0-beta/welcome.zh_CN.mdx
---
title: "Welcome to Instill AI Documentation!"
lang: "en-US"
draft: false
description: "Welcome to Instill AI Documentation"
---

## Instill Core

Explore 🔮 [**Instill Core**](https://github.com/instill-ai/core), our open-source orchestrator for data, AI and pipelines.
It includes a set of projects aimed at simplifying building versatile AI applications for unstructured data.

<ZoomableImg
  src="https://raw.githubusercontent.com/instill-ai/.github/main/img/instill-projects.svg"
  alt="Open-source Orchestrator for Data, AI and Pipelines"
/>

### Instill VDP

💧 **Instill VDP**, or **VDP (Versatile Data Pipeline)**, is a robust data orchestrator tailored to address unstructured data ETL challenges.
It is to streamline processing unstructured data from diverse sources, such as AI applications, cloud or on-premises storage systems, and IoT devices.
By leveraging AI models and incorporating custom logic, VDP facilitates the transformation of raw data into insightful and actionable formats. 
Additionally, it loads the processed data into data warehouses, applications, or any desired destinations.
VDP enables building flexible and durable pipelines, with features like failover mechanisms, automatic retries, rate limiting, and batching to handle high-volume data straight out of the box.

For those seeking to integrate AI into their applications, VDP provides a comprehensive solution.
Users can seamlessly connect their data with a variety of AI models, including Large Language Models (LLMs), Vision, Audio, and other specialized models.
Moreover, VDP enables users to incorporate custom data transformation logic into their pipelines, facilitating the creation of tailored workflows.
Additionally, users can visually test these pipelines with a single click,  monitor each stage of the output, and share their pipelines to demonstrate their work, thus fostering collaboration and knowledge sharing within the organization or the wider public.

<ZoomableImg
  src="https://raw.githubusercontent.com/instill-ai/.github/main/img/console.svg"
  alt="Build, test and share your pipelines - No code required!"
/>

### Instill Model

⚗️ **Instill Model**, or simply **Model**, an advanced ModelOps/LLMOps platform focused on empowering users to seamlessly import, serve, fine-tune, and monitor Machine Learning (ML) models for continuous optimization.

### Instill Artifact (Coming Soon)

💾 **Instill Artifact**, or simply **Artifact**, is your platform for transforming documents (e.g., HTML, PDF, CSV, PPTX, DOC), images (e.g., JPG, PNG, TIFF), audio (e.g., WAV, MP3 ) and video (e.g., MP4, MOV) of various formats into a unified AI-ready format.
It ensures your data is clean, curated, and ready for extracting insights and building your knowledge base.

## Instill Cloud

Not quite into self-hosting? We've got you covered with **☁️ Instill Cloud**!
It's a fully-managed public cloud service that grants you access to all the fantastic features of the open-source unstructured data infrastructure stack, without the hassle of managing infrastructure.
We're currently in the exciting Open Alpha testing phase, and all features are FREE during this period!

<CtaButton
  text="🚀 Try Instill Cloud Free"
  link="https://console.instill.tech/?utm_source=documentation&utm_medium=link"
/>

## Highlights

- 🚀 Accelerate AI-first applications by building end-to-end AI-powered pipelines for unstructured data up to 10 times faster
- 🔌 Utilize pre-built connectors to access data from various sources, powerful AI models, and third-party tools
- 🖱️ One-click import & deploy models and standardise AI task output formats for data integration
- 🌟 Benefit from a no-code drag-and-drop pipeline builder, enabling quick and customizable application development
- 🪢 Choose between real-time inference (SYNC) and on-demand workload (ASYNC) processing modes
- 🧁 Enjoy a scalable API-first microservice design, offering an excellent developer experience
- ⚡️ Leverage high-performing backends implemented in Go
- 📊 Gain visibility into pipeline performance through a detailed dashboard
- 🤠 Access no-/low-code interfaces, making VDP suitable for every AI and data practitioner

## No-Code/Low-Code Access

<InfoBlock type="info" title="Info">
  To access Instill Cloud, head to https://console.instill.tech.
</InfoBlock>

To access Instill Core and Instill Cloud, you have a few options:

- ⛅ [Instill Console](https://github.com/instill-ai/console): Dive in Instill Core/Cloud with no coding
- 📺 [Instill CLI](https://github.com/instill-ai/cli): Bring Instill Core/Cloud to your command line
- 📦 [Instill SDKs](./sdk/python): Integrate Instill Core/Cloud with your language of choice

## Be Part of Our Community and Make a Difference

We strongly believe in the power of community collaboration and deeply value your contributions.
Head over to our [Community](https://github.com/instill-ai/community) repository, the central hub for discussing our open-source projects, raising issues, and sharing your brilliant ideas.

Or, join our community on [Discord](https://discord.gg/sevxWsqpGh) to engage with fellow users and seek assistance:

- 👋 Start by introducing yourself in the **#introduce-yourself** channel and selecting a role in **#welcome**
- 🫶 Seek answers to your queries in our **#ask-for-help** channel
- 🙏 Provide valuable feedback in the **#give-feedback** channel
- 💎 Showcase your exciting projects in the **#show-your-work** channel

## Learn More and Stay Connected

- ⭐️ Show your support for Instill Core by giving it a star on [GitHub](https://github.com/instill-ai)
- 📚 Read our insightful [blog](/blog/?utm_source=documentation&utm_medium=link) and [tutorials](/tutorials/?utm_source=documentation&utm_medium=link)
- 📖 Subscribe to our informative [Newsletter](/newsletter/?utm_source=documentation&utm_medium=link)
- 🚀 Visit our [Product Website](/?utm_source=documentation&utm_medium=link) for more details

## Collaboration

At Instill, we believe in making AI accessible to everyone.
If you have an AI showcase, let's collaborate!
[Book a meeting](https://calendly.com/instill-ai/chat-with-us) to tell us about yourself and your project, and we'll be in touch 👐.
